force-app/main/default/objects/requestMessageHistory__c/requestMessageHistory__c.object-meta.xml
<CustomObject>
    <label>requestMessageHistory</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Senders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>requestMessageHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>