force-app/main/default/objects/requestMessageHistory__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>requestMessageHistories</relationshipLabel>
    <relationshipName>requestMessageHistories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>