force-app/main/default/objects/requestMessageHistory__c/fields/NotificationList__c.field-meta.xml
<CustomField>
    <fullName>NotificationList__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NotificationList</label>
    <length>18</length>
    <type>Text</type>
</CustomField>